# Imaginary

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.h
.github/workflows/: Imaginary.yml
include/: bgr_t.hpp  canny.hpp  color.hpp  convolute.hpp  dct.hpp  deviation.hpp  dilute.hpp  grayify.hpp  math.hpp  median.hpp  multiply.hpp  resize.hpp  sharpen.hpp  spatial.hpp
lib/: bgr_t.cpp  bgr_t.hpp  canny.cpp  color.cpp  convolute.cpp  convolute.hpp  dct.cpp  deviation.cpp  deviation.hpp  dilute.cpp  grayify.cpp  grayify.hpp  math.cpp  median.cpp  multiply.hpp  resize.cpp  resize.hpp  sharpen.cpp  spatial.cpp
src/: gray_lambdas.hpp  grayify.hpp  io.hpp  lambdas.hpp  main.cpp  review_lambdas.hpp
test/: main.cpp
test/lib/: deviation.cpp  grayify.cpp  resize.cpp  sharpen.cpp
test/src/: test.cpp
